@@ -99,7 +99,7 @@ publish
 # Others
 [Bb]in
 [Oo]bj
-sql
+# sql
 TestResults
 *.Cache
 ClientBin
