@@ -1,0 +1,3 @@
+DROP TABLE IF EXISTS `#__ditems`;
+DROP TABLE IF EXISTS `#__ditem_dnames`;
+DROP TABLE IF EXISTS `#__ditem_dtracks`;
