@@ -1,3 +1,5 @@
+Comment out ignore sql in github .gitignore (# sql)
+===============================================
 banner -> ditem
 banners -> ditems
 plus capitalized versions
